# profit

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .travis.yml.old  .zenodo.json  CITATION.cff  CONCEPT.md  CONTRIBUTING.md  INSTALL.md  LICENSE.txt  License.md  README.md  TESTING.md  __init__.py  config.py  coverage.sh  pyproject.toml  redmod.py  redmod_run.py  requirements.txt  run.py  setup.cfg  setup.py  test_normal_transform.py  uq.py  uqslurm.py
.github/workflows/: install-and-test.yml  publish-to-pypi.yml  python-package.yml  test-defaults.yml  test-gp-accuracy-plots.yml
Pendulum/: run_GP.py
Pendulum/cosine_prod/: init_func_cosine_prod.py  kernels.f90  test_cosine_prod.py
Pendulum/expsin/: func_expsin.py  init_func_expsin.py  test_expsin.py
Pendulum/pendulum_old/: init.py
Pendulum/pendulum_updated/: run_GP.py
Pendulum/prod_extended/: expsin_gpy.py  prod_extended.py  test_ProdExtended.py
Pendulum/sinus_prod/: func_sinus_prod.py  init_func_sinus_prod.py  sinus_prod.py
backend/run/: slurm.py
doc/: active_learning.rst  cluster.rst  code_structure.rst  codegen.rst  components.rst  conf.py  config.rst  design.rst  dev_run_system.rst  draft_loop.py  example-fit.ipynb  example-run.ipynb  examples.rst  extensions.rst  gp_custom.ipynb  gp_custom_test.py  index.rst  kernels.md  kernels.rst  mcmc.rst  modules.rst  profit.rst  profit.run.rst  profit.sur.backend.rst  profit.sur.rst  profit.ui.rst  profit.uq.rst  profit.util.rst  run_system.rst  start.rst  surrogates.rst  suruq.rst  suruq.uq.rst  troubleshooting.rst  ui.rst  variables.rst
draft/: Active_BBQ.py  Active_MGP.py  Random_GP.py  ann.ipynb  autoencoder.ipynb  autoencoder.lyx  autoencoder_pytorch.py  benchmark.py  component.ipynb  config.ipynb  derivative_observations_gpy.py  design.rst  distributions.ipynb  draft_embedding.lyx  draft_kernels.py  draft_pca_surrogate.ipynb  embedding.lyx  embedding.py  embeddings.ipynb  gp_jax.py  gpflow_fit.ipynb  gpflow_fit.py  highdim_output.py  highdim_output_algae.py  highdim_output_nonlin.py  highdim_output_pendulum.py  import.jl  input.csv  kernels.lyx  mlp_jax.py  pce.ipynb  profit_int.yaml  quadrature.ipynb  redmod_conf.py  suruq.wl  sympy_theano_jax.py  test2.jl  test_array_temporaries.f90  test_autoencoder.py  test_autoencoder_sklearn.py  (+22 more)
draft/GP_Regression/profit/: GP_profit.py
draft/Pendulum/: config.yaml  cosine.nb  cosine_gpy.py  func.py  init.py  init_func.py  param.py  run_GP.py  sqexpsin.nb
draft/algae/: autoencoder_algae_torch.ipynb  redmod_conf.py  test_algae.py
draft/bench_gpfunc/: Makefile  bench_inline.f90  gpfunc_bench.f90  test.f90
draft/fortran_vs_numpy/: bench_fortran_numpy.py  bench_kernels.jl
draft/generate_kern_vec/: Makefile  bench_inline.f90  gpfunc_bench.f90  indexed_sum.py  test_gen_kern.ipynb  test_kern_vec.py
draft/mockup_scripts/: mockup_sur.ipynb
draft/optim/: draft_optim.py
draft/pca_surrogate/: parameters.in  post.py  profit.yaml  simulation.py
draft/pca_surrogate/template/: parameters.in
draft/pendulum/cosine/: cosine_test.py
draft/pendulum/expsin/: expsin.py  kernels.f90  kernels.py
draft/pendulum/pendulum_old/: func.py  init.py
draft/pendulum/pendulum_updated/: init_func.py  kernels.f90  param.py
draft/pendulum/prod_extended/: cosine_prod.py
draft/pendulum/sinus_prod/: sinus_prod.py  test_sinus_prod.py
examples/: mossco.py  positive_parameters.py  run-config.md
examples/GP_Regression/GPy/: GP_GPy.py
examples/GP_Regression/profit/: GP_profit.py
examples/Gaussian Regression/GPy/: GP_GPy.py
examples/Gaussian Regression/proFIT/: GP_profit.py
examples/algae/: autoencoder_algae.ipynb  params.txt  params_1998.txt  redmod_conf.py  test_algae.py  test_algae_post.py
examples/api/: example_fit.py  run.ipynb  surrogate.ipynb
examples/derivative_observations/: derivative_observations_gpy.py
examples/finance/: finance_SPY.py
examples/fit/: example_fit.py  surrogate.ipynb
examples/hymod/: interface.py  redmod_conf.py
examples/mockup/: README.md  interface.py  mockup.py  mockup_sur.ipynb  post.py  pre.py  profit.yaml  redmod.conf.py  redmod_conf.py  run.py  suruq.yaml
examples/mockup/simple/: profit.yaml
examples/mockup_scripts/: README.md  mockup.py  mockup_sur.ipynb  mockup_sur.py  mockup_suruq.py
examples/mossco/: README.md  interface.py  post.py  postprocess.py  pre.py  redmod_conf.py  run.py
profit/: __init__.py  config.py  defaults.py  fit.py  main.py  post.py  pre.py
profit/al/: __init__.py  active_learning.py  aquisition_functions.py  mcmc_al.py  simple_al.py
profit/draft/: Active_BBQ.py  Active_MGP.py  Random_GP.py  draft_kernels.py  gpytorch.py
profit/run/: __init__.py  backend.py  command.py  default.py  interface.py  local.py  run.py  runner.py  slurm.py  test.py  worker.py  zeromq.py
profit/sur/: __init__.py  ann.py  artificial_neural_network.py  encoders.py  gaussian_process.py  gp.py  linear_reduction.py  linear_regression.py  sur.py
profit/ui/: __init__.py  app.py  condhist.py  hist_utils.py
profit/uq/: __init__.py  backend.py  uq.py
profit/util/: base_class.py  component.py  file_handler.py  halton.py  io.py  util.py  variable.py  variable_kinds.py
redmod/: __init__.py  redmod.py  run.py  uq.py
suruq/: __init__.py  config.py  main.py  suruq.py  uq.py
suruq/run/: backend.py
suruq/sur/: sur.py
suruq/uq/: backend.py
suruq/util/: util.py
tests/: conftest.py  generate_comparison_plots.py  test_kernels.py
tests/active_learning/: test_active_learning.py
tests/backend_uqp/: test0_backend_uqp.py
tests/config/: test_config.py
tests/config_tests/: mockup.py
tests/integration_tests/: test_default_workflow.py
tests/mockup/: mockup_custom_worker.py  test_mockup.py
tests/run/: interactive.ipynb  memmap.py  numpy.yaml  profit.yaml  test_components.py  worker.bash  worker.py  zeromq.yaml
tests/sur/: test3.py  test_encoder.py  test_gp.py  test_kernels.py  test_linear_reduction.py  test_sur.py  test_units.py
tests/unit_tests/: test_regression_gpytorch.py
(+200 files in other folders)
