# Specifying the build system - PEP 517

[build-system]
requires = [
    "setuptools>=42,<60",
    "wheel",
    "numpy==1.16.6; python_version<='3.7' and platform_machine!='aarch64'",
    "numpy==1.17.5; python_version=='3.8' and platform_machine!='aarch64'",
    "numpy==1.19.5; python_version=='3.9' and platform_machine!='aarch64'",
    "numpy==1.21.4; python_version>='3.10' and platform_machine!='aarch64'",
    "numpy==1.21.4; platform_machine=='aarch64'",
    "setuptools_scm[toml]>=3.4"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# infers current version from git tag + commit
# includes all file tracked by git in the source distribution

[tool.pytest.ini_options]
addopts = "--verbose --cov=profit"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s %(levelname)8s %(name)s: %(message)s"
log_format = "%(asctime)s %(levelname)8s %(name)s: %(message)s"
testpaths = [
   "tests/unit_tests",
   "tests/integration_tests",
]
filterwarnings = [
   "ignore::DeprecationWarning:pyparsing.*:",
   "ignore::DeprecationWarning:matplotlib.*:",
   "ignore::DeprecationWarning:scipy.*:",
   "ignore::DeprecationWarning:paramz.*:",
]

[tool.black]
extend-exclude = "draft"
