# package information & setup configuration file
# used by setuptools

[metadata]
name = profit
version = 0.4.alpha.dev
#TODO version = attr: profit.__version__
author = Christopher Albert
author_email = albert@alumni.tugraz.at
url = https://github.com/redmod-team/profit
description = Probabilistic response surface fitting
long_description = file: README.md
keywords = PCE, UQ
license = MIT

[options]
python_requires = >= 3.7
install_requires =
    numpy>=1.16.0
    scipy
    matplotlib
    sympy
    pyyaml
    chaospy
    GPy
    scikit-learn
    pandas
    h5py
    dash
    tqdm
setup_requires =
    pytest-runner
tests_require = pytest
packages = find:
include_package_data = True

[options.extras_require]
docs =
    sphinx
    sphinx_math_dollar
    sphinx_rtd_theme
gpu =
    torch
    gpytorch

[options.packages.find]
exclude = *.tests, *.tests.*, tests.*, tests

[options.entry_points]
console_scripts =
    profit = profit.main:main

[aliases]
test=pytest

[tool:pytest]
addopts = --verbose
python_files = tests/*/test_*.py
filterwarnings =
    ignore::DeprecationWarning:pyparsing.*:
    ignore::DeprecationWarning:matplotlib.*:
    ignore::DeprecationWarning:tensorflow.*:
    ignore::DeprecationWarning:scipy.*:
    ignore::DeprecationWarning:paramz.*:
