# package information & setup configuration file
# used by setuptools

[metadata]
name = profit
author = Christopher Albert
author_email = albert@tugraz.at
description = Probabilistic response model fitting with interactive tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/redmod-team/profit
project_urls = 
    Issue Tracker = https://github.com/redmod-team/profit/issues
    Documentation = https://profit.readthedocs.io/en/latest
keywords = PCE, UQ
license = MIT
classifiers = 
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Framework :: Dash

[options]
python_requires = >= 3.7
install_requires =
    numpy>=1.16.0
    scipy
    matplotlib
    sympy
    pyyaml
    chaospy
    GPy
    scikit-learn
    pandas
    h5py
    dash>=1.20.0
    tqdm
    zmq
    importlib_metadata; python_version<'3.8'
tests_require = pytest
packages = find:
include_package_data = True

[options.extras_require]
docs =
    sphinx>=1.8.3
    sphinx_math_dollar
    sphinx_rtd_theme
    sphinx_autoapi
    sphinx_toolbox
    recommonmark>=0.5.0
    cachecontrol>=0.12.6
    lockfile>=0.12.2
gpu =
    torch
    gpytorch
dev =
    pytest
    pytest-cov

[options.packages.find]
exclude = *.tests, *.tests.*, tests.*, tests

[options.entry_points]
console_scripts =
    profit = profit.main:main
    profit-worker = profit.run.worker:main

[aliases]
test=pytest

[tool:pytest]
addopts =
    --verbose
    --cov=profit
testpaths =
    tests/unit_tests
    tests/integration_tests
filterwarnings =
    ignore::DeprecationWarning:pyparsing.*:
    ignore::DeprecationWarning:matplotlib.*:
    ignore::DeprecationWarning:scipy.*:
    ignore::DeprecationWarning:paramz.*:
